Reorganize for better readability
