# api.yml
@@ -5,6 +5,9 @@ info:
   version: "1.0"
   description: Simple example API
 
+servers:
+  - url: /api
+
 paths:
   /auth/login:
     post:
@@ -30,6 +33,63 @@ paths:
           description: Return jwt token
         "401":
           description: Bad auth
+  /auth/logout:
+    post:
+      summary: Disable refresh token
+      security:
+        - jwt: [ ]
+      tags:
+        - Authentication
+      requestBody:
+        content:
+          application/json:
+            schema:
+              required:
+                - refreshToken
+              properties:
+                refreshToken:
+                  type: string
+      operationId: app.logout
+      responses:
+        "200":
+          description: Logout
+        "401":
+          description: Bad request
+  /auth/token/info:
+    get:
+      summary: Get a decrypted token
+      security:
+        - jwt: [ ]
+      tags:
+        - Authentication
+      operationId: app.token_info
+      responses:
+        "200":
+          description: Token info
+        "401":
+          description: Bad request
+  /auth/token/refresh:
+    post:
+      summary: Refresh a token
+      tags:
+        - Authentication
+      operationId: app.refresh_token
+      requestBody:
+        content:
+          application/json:
+            schema:
+              required:
+                - refreshToken
+              properties:
+                refreshToken:
+                  type: string
+      responses:
+        "200":
+          description: Refresh token
+        "401":
+          description: Bad request
+
+
   /user/register/customer:
     post:
       summary: Register a user as a customer
@@ -85,6 +145,101 @@ paths:
           description: Return jwt token
         "401":
           description: Bad auth
+  /user/info:
+    get:
+      summary: Get an object that represents the current user
+      security:
+        - jwt: [ ]
+      tags:
+        - User
+      operationId: app.user_info
+      responses:
+        "200":
+          description: User info
+        "401":
+          description: Bad request
+    post:
+      summary: Get an object that represents the requested user
+      security:
+        - jwt: [ ]
+      tags:
+        - User
+      operationId: app.any_user_info
+      requestBody:
+        content:
+          application/json:
+            schema:
+              required:
+                - username
+              properties:
+                username:
+                  type: string
+      responses:
+        "200":
+          description: Any user info based on username
+        "401":
+          description: Bad request
+  /user/update:
+    put:
+      summary: Update a user
+      security:
+        - jwt: [ ]
+      tags:
+        - User
+      operationId: app.update_user
+      requestBody:
+        content:
+          application/json:
+            schema:
+              required:
+                - id
+              properties:
+                id:
+                  type: string
+                username:
+                  type: string
+                password:
+                  type: string
+                enabled:
+                  type: boolean
+                firstName:
+                  type: string
+                lastName:
+                  type: string
+                email:
+                  type: string
+                attributes:
+                  type: object
+        description: Representation of a user
+      responses:
+        "200":
+          description: Successful update
+        "401":
+          description: Bad request
+  /user/delete:
+    post:
+      summary: Delete a user
+      security:
+        - jwt: [ ]
+      tags:
+        - User
+      requestBody:
+        content:
+          application/json:
+            schema:
+              required:
+                - id
+              properties:
+                id:
+                  type: string
+      operationId: app.delete_user
+      responses:
+        "200":
+          description: Deleted user sucessfully.
+        "401":
+          description: Bad request.
+
+
   /role/create:
     post:
       summary: Create a client role
@@ -105,21 +260,6 @@ paths:
                 attributes:
                   type: object
         description: Create role
-      responses:
-        "200":
-          description: Create role
-        "401":
-          description: Bad request
-  /role/userContains:
-    post:
-      summary: Check whether the current user contains a specific client role
-      security:
-        - jwt: [ ]
-      tags:
-        - Role
-      operationId: app.user_contains_role
-      requestBody:
-        $ref: "#/components/requestBodies/app.user_contains_roleRoleBody"
       responses:
         "200":
           description: Create role
@@ -164,150 +304,22 @@ paths:
           description: Delete role
         "401":
           description: Bad request
-  /user/info:
-    get:
-      summary: Get an object that represents the current user
-      security:
-        - jwt: [ ]
-      tags:
-        - User
-      operationId: app.user_info
-      responses:
-        "200":
-          description: User info
-        "401":
-          description: Bad request
+  /role/userContains:
     post:
-      summary: Get an object that represents the requested user
+      summary: Check whether the current user contains a specific client role
       security:
         - jwt: [ ]
       tags:
-        - User
-      operationId: app.any_user_info
+        - Role
+      operationId: app.user_contains_role
       requestBody:
-        content:
-          application/json:
-            schema:
-              required:
-                - username
-              properties:
-                username:
-                  type: string
+        $ref: "#/components/requestBodies/app.user_contains_roleRoleBody"
       responses:
         "200":
-          description: Any user info based on username
-        "401":
-          description: Bad request
-  /token/info:
-    get:
-      summary: Get a decrypted token
-      security:
-        - jwt: [ ]
-      tags:
-        - Authentication
-      operationId: app.token_info
-      responses:
-        "200":
-          description: Token info
-        "401":
-          description: Bad request
-  /auth/token/refresh:
-    post:
-      summary: Refresh a token
-      tags:
-        - Authentication
-      operationId: app.refresh_token
-      requestBody:
-        $ref: "#/components/requestBodies/app.refresh_tokenRefreshTokenBody"
-      responses:
-        "200":
-          description: Refresh token
-        "401":
-          description: Bad request
-  /auth/logout:
-    post:
-      summary: Disable refresh token
-      security:
-        - jwt: [ ]
-      tags:
-        - Authentication
-      requestBody:
-        content:
-          application/json:
-            schema:
-              required:
-                - refreshToken
-              properties:
-                refreshToken:
-                  type: string
-      operationId: app.logout
-      responses:
-        "200":
-          description: Logout
-        "401":
-          description: Bad request
-  /user/delete:
-    post:
-      summary: Delete a user
-      security:
-        - jwt: [ ]
-      tags:
-        - User
-      requestBody:
-        content:
-          application/json:
-            schema:
-              required:
-                - id
-              properties:
-                id:
-                  type: string
-      operationId: app.delete_user
-      responses:
-        "200":
-          description: Deleted user sucessfully.
-        "401":
-          description: Bad request.
-  /user/update:
-    put:
-      summary: Update a user
-      security:
-        - jwt: [ ]
-      tags:
-        - User
-      operationId: app.update_user
-      requestBody:
-        content:
-          application/json:
-            schema:
-              required:
-                - id
-              properties:
-                id:
-                  type: string
-                username:
-                  type: string
-                password:
-                  type: string
-                enabled:
-                  type: boolean
-                firstName:
-                  type: string
-                lastName:
-                  type: string
-                email:
-                  type: string
-                attributes:
-                  type: object
-        description: Representation of a user
-      responses:
-        "200":
-          description: Successful update
+          description: Create role
         "401":
           description: Bad request
 
-servers:
-  - url: /api
 
 components:
   requestBodies:
@@ -321,16 +333,7 @@ components:
               role:
                 type: string
       description: Role
-    app.refresh_tokenRefreshTokenBody:
-      content:
-        application/json:
-          schema:
-            required:
-              - refreshToken
-            properties:
-              refreshToken:
-                type: string
-      description: Refresh Token
+
   securitySchemes:
     jwt:
       type: http
